Revert "Add Helm C3 executor and dist store caching"
This reverts commit d199978f1eaf648ec014e5e171e481698b6bb554.

Change-Id: If484452e8608f2dbdfa2713ca33bb13b4c92c4f0

--- a/charts/dremio/templates/dremio-admin.yaml
+++ b/charts/dremio/templates/dremio-admin.yaml
@@ -12,7 +12,7 @@ metadata:
 spec:
   containers:
   - name: dremio-admin
-    image: {{.Values.image}}:{{.Values.imageTag}}
+    image: {{.Values.image}}
     imagePullPolicy: IfNotPresent
     stdin: true
     tty: true
