--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -15,33 +15,21 @@
 #
 
 paths: {
-  # the local path for dremio to store data.
+  # Local path for dremio to store data.
   local: ${DREMIO_HOME}"/data"
-
-  # the distributed path Dremio data including job results, downloads, uploads, etc
-  #dist: "pdfs://"${paths.local}"/pdfs"
-
-  # If you are editing the uploads value in this file, please delete all the lines starting with double curly braces
-  {{- if .Values.distStorage.type }}
-  {{- if and .Values.dremioVersion (lt .Values.dremioVersion "3.2.0") }}
-  {{- if eq .Values.distStorage.type "aws" }}
-  uploads: "s3a://{{required "AWS bucketname required" .Values.distStorage.aws.bucketName}}{{required "Path required" .Values.distStorage.aws.path}}"
-  {{- end }}
-  {{- if eq .Values.distStorage.type "azure" }}
-  uploads: "adl://{{required "Azure Datalake store name required" .Values.distStorage.azure.datalakeStoreName}}.azuredatalakestore.net{{required "Path required" .Values.distStorage.azure.path}}"
-  {{- end }}
-  {{- else }} # dremio_version > 3.2.0
-  {{- if eq .Values.distStorage.type "aws" }}
-  uploads: "dremioS3://{{required "AWS bucketname required" .Values.distStorage.aws.bucketName}}{{required "Path required" .Values.distStorage.aws.path}}"
-  {{- end }}
-  {{- if eq .Values.distStorage.type "azure" }}
-  uploads: "dremioAdl://{{required "Azure Datalake store name required" .Values.distStorage.azure.datalakeStoreName}}.azuredatalakestore.net{{required "Path required" .Values.distStorage.azure.path}}"
-  {{- end }}
-  {{- if eq .Values.distStorage.type "azureStorage" }}
-  uploads: "dremioAzureStorage://:///{{required "Azure Storage filesystem required" .Values.distStorage.azureStorage.filesystem}}/{{required "Path for uploads required" .Values.distStorage.azureStorage.uploadsPath}}"
-  accelerator: "dremioAzureStorage://:///{{required "Azure Storage filesystem required" .Values.distStorage.azureStorage.filesystem}}/{{required "Path for uploads required" .Values.distStorage.azureStorage.acceleratorPath}}"
-  {{- end }}
-  {{- end }}
+  # Distributed path Dremio data including job results, downloads,
+  # uploads, etc
+  {{- if ne .Values.distStorage.type "local" }}
+  results: "pdfs://"${paths.local}"/results"
+    {{- if eq .Values.distStorage.type "aws" }}
+  dist: "dremioS3:///{{ required "AWS bucketname required" .Values.distStorage.aws.bucketName }}{{ required "Path required" .Values.distStorage.aws.path }}"
+    {{- else if eq .Values.distStorage.type "azure" }}
+  dist: "dremioAdl://{{ required "Azure Datalake store name required" .Values.distStorage.azure.datalakeStoreName }}.azuredatalakestore.net{{ required "Path required" .Values.distStorage.azure.path }}"
+    {{- else if eq .Values.distStorage.type "azureStorage" }}
+  dist: "dremioAzureStorage://:///{{ required "Azure Storage filesystem required" .Values.distStorage.azureStorage.filesystem }}{{ required "Path required" .Values.distStorage.azureStorage.path }}"
+    {{- end }}
+  {{- else }}
+  dist: "pdfs://"${paths.local}"/pdfs"
   {{- end }}
 }
 
@@ -54,7 +42,29 @@ services: {
   #   executor.enabled: true
   #
   # Other service parameters can be customized via this file.
+
+  # Cloud Cache is supported in Dremio 4.0.0+.
+  {{- if and .Values.executor.cloudCache.enabled (or (ge .Values.imageTag "4.0.0") (eq .Values.imageTag "latest")) }}
+  executor: {
+    cache: {
+      path.db: "/var/lib/dremio",
+      path.fs: ["/var/lib/dremio"],
+      pctquota.db: {{ .Values.executor.cloudCache.quota.db_pct }},
+      pctquota.fs: [{{ .Values.executor.cloudCache.quota.fs_pct }}]
+    }
+  }
+  {{- end }}
 }
+
+{{- if and .Values.executor.cloudCache.enabled (ne .Values.distStorage.type "local") }}
+debug: {
+  # Enable caching for distributed storage, it is turned off by default
+  dist.caching.enabled: true,
+  # Max percent of total available cache space to use when possible
+  # for distributed storage
+  dist.max.cache.space.percent: {{ .Values.executor.cloudCache.quota.cache_pct }}
+}
+{{- end }}
 
 {{- if .Values.tls.ui.enabled }}
 services.coordinator.web.ssl.enabled: true
@@ -64,9 +74,9 @@ services.coordinator.web.ssl.keyStore: "/opt/dremio/tls/ui.pkcs12"
 {{- end }}
 
 {{- if .Values.tls.client.enabled }}
-# Client endpoint (i.e. ODBC/JDBC) encryption is only supported in Dremio Enterprise Edition.
+# Client endpoint (i.e. ODBC/JDBC) encryption is only supported in
+# Dremio Enterprise Edition.
 services.coordinator.client-endpoint.ssl.enabled: true
 services.coordinator.client-endpoint.ssl.auto-certificate.enabled: false
-
 services.coordinator.client-endpoint.ssl.keyStore: "/opt/dremio/tls/client.pkcs12"
 {{- end }}
