--- a/charts/dremio/templates/dremio-executor.yaml
+++ b/charts/dremio/templates/dremio-executor.yaml
@@ -60,7 +60,7 @@ spec:
       initContainers:
       - name: wait-for-zk
         image: busybox
-        command:  ["sh", "-c", "until ping -c 1 -W 1 zk-hs > /dev/null; do echo waiting for zookeeper host; sleep 2; done;"]
+        command:  ["sh", "-c", "until echo ok | nc zk-hs 2181 > /dev/null; do echo waiting for zookeeper host; sleep 2; done;"]
       # since we're mounting a separate volume, reset permission to
       # dremio uid/gid
       - name: chown-data-directory
