ADLS Gen1 dist storage update
Update to conf files to cater for pre-3.2.0 Dremio implementation of ADLS Gen1 Storage

--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -23,8 +23,10 @@ paths: {
   results: "pdfs://"${paths.local}"/results"
     {{- if eq .Values.distStorage.type "aws" }}
   dist: "dremioS3:///{{ required "AWS bucketname required" .Values.distStorage.aws.bucketName }}{{ required "Path required" .Values.distStorage.aws.path }}"
-    {{- else if eq .Values.distStorage.type "azure" }}
+    {{- else if and eq .Values.distStorage.type "azure" (or (ge .Values.imageTag "3.2.0") (eq .Values.imageTag "latest")) }}
   dist: "dremioAdl://{{ required "Azure Datalake store name required" .Values.distStorage.azure.datalakeStoreName }}.azuredatalakestore.net{{ required "Path required" .Values.distStorage.azure.path }}"
+    {{- else if and eq .Values.distStorage.type "azure" lt .Values.imageTag "3.2.0" }}
+  dist: "adl://{{ required "Azure Datalake store name required" .Values.distStorage.azure.datalakeStoreName }}.azuredatalakestore.net{{ required "Path required" .Values.distStorage.azure.path }}"
     {{- else if eq .Values.distStorage.type "azureStorage" }}
   dist: "dremioAzureStorage://:///{{ required "Azure Storage filesystem required" .Values.distStorage.azureStorage.filesystem }}{{ required "Path required" .Values.distStorage.azureStorage.path }}"
     {{- end }}
