--- a/charts/weave-scope/values.yaml
+++ b/charts/weave-scope/values.yaml
@@ -49,6 +49,7 @@ weave-scope-frontend:
       nginx.ingress.kubernetes.io/rewrite-target: /$2
       nginx.ingress.kubernetes.io/auth-type: basic
       nginx.ingress.kubernetes.io/auth-secret: weave-pass
+      nginx.ingress.kubernetes.io/app-root: /app
       nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
       nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/app)$ /app/ permanent;
     # weave-scope-frontend path(s) must be provided if Ingress is enabled
