Engine based configuration.
+ add log and archive to /var/log/dremio, configure prewarm code cache
+ seperate executors into 2 groups: query-executor and reflection-executor
+ delete non-master coordinator UI port
+ put cache in /mnt/nvme2n1
Note: spilling is in local disk, result is on path.dist

Change-Id: Icf651cbf757f7bff74f1855adc04bbb8602e0e0c

--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -47,8 +47,8 @@ services: {
   {{- if and .Values.executor.cloudCache.enabled (or (ge .Values.imageTag "4.0.0") (eq .Values.imageTag "latest")) }}
   executor: {
     cache: {
-      path.db: "/var/lib/dremio",
-      path.fs: ["/var/lib/dremio"],
+      path.db: "/opt/dremio/data",
+      path.fs: ["/opt/dremio/data"],
       pctquota.db: {{ .Values.executor.cloudCache.quota.db_pct }},
       pctquota.fs: [{{ .Values.executor.cloudCache.quota.fs_pct }}]
     }
