--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -31,6 +31,7 @@ paths: {
   {{- else }}
   dist: "pdfs://"${paths.local}"/pdfs"
   {{- end }}
+  results: ${paths.dist}/results
 }
 
 services: {
@@ -47,8 +48,8 @@ services: {
   {{- if and .Values.executor.cloudCache.enabled (or (ge .Values.imageTag "4.0.0") (eq .Values.imageTag "latest")) }}
   executor: {
     cache: {
-      path.db: "/var/lib/dremio",
-      path.fs: ["/var/lib/dremio"],
+      path.db: "/opt/dremio/data",
+      path.fs: ["/opt/dremio/data"],
       pctquota.db: {{ .Values.executor.cloudCache.quota.db_pct }},
       pctquota.fs: [{{ .Values.executor.cloudCache.quota.fs_pct }}]
     }
