Engine based configuration.
+ enabled dremio admin
+ add log and archive to /var/log/dremio
+ seperate executors into 2 groups: query-executor and reflection-executor
+ delete non-master coordinator UI port
+ put cache in /mnt/nvme2n1
Note: spilling is in local disk, result is on path.dist

Change-Id: Icf651cbf757f7bff74f1855adc04bbb8602e0e0c

--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -23,6 +23,7 @@ paths: {
   results: "pdfs://"${paths.local}"/results"
     {{- if eq .Values.distStorage.type "aws" }}
   dist: "dremioS3:///{{ required "AWS bucketname required" .Values.distStorage.aws.bucketName }}{{ required "Path required" .Values.distStorage.aws.path }}"
+  results: "dremioS3:///{{ required "AWS bucketname required" .Values.distStorage.aws.bucketName }}{{ required "Path required" .Values.distStorage.aws.path }}/results"
     {{- else if eq .Values.distStorage.type "azure" }}
   dist: "dremioAdl://{{ required "Azure Datalake store name required" .Values.distStorage.azure.datalakeStoreName }}.azuredatalakestore.net{{ required "Path required" .Values.distStorage.azure.path }}"
     {{- else if eq .Values.distStorage.type "azureStorage" }}
@@ -47,8 +48,8 @@ services: {
   {{- if and .Values.executor.cloudCache.enabled (or (ge .Values.imageTag "4.0.0") (eq .Values.imageTag "latest")) }}
   executor: {
     cache: {
-      path.db: "/var/lib/dremio",
-      path.fs: ["/var/lib/dremio"],
+      path.db: "/opt/dremio/data",
+      path.fs: ["/opt/dremio/data"],
       pctquota.db: {{ .Values.executor.cloudCache.quota.db_pct }},
       pctquota.fs: [{{ .Values.executor.cloudCache.quota.fs_pct }}]
     }
