--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -47,8 +47,8 @@ services: {
   {{- if and .Values.executor.cloudCache.enabled (or (ge .Values.imageTag "4.0.0") (eq .Values.imageTag "latest")) }}
   executor: {
     cache: {
-      path.db: "/var/lib/dremio",
-      path.fs: ["/var/lib/dremio"],
+      path.db: "/mnt/nvme2n1",
+      path.fs: ["/mnt/nvme2n1"],
       pctquota.db: {{ .Values.executor.cloudCache.quota.db_pct }},
       pctquota.fs: [{{ .Values.executor.cloudCache.quota.fs_pct }}]
     }
