k8s: query refelction engines
Change-Id: Icf651cbf757f7bff74f1855adc04bbb8602e0e0c

--- a/charts/dremio/templates/dremio-executor.yaml
+++ b/charts/dremio/templates/dremio-executor.yaml
@@ -51,9 +51,7 @@ spec:
             {{- if .Values.extraStartParams }}
             {{ .Values.extraStartParams }}
             {{- end }}
-        command: ["/opt/dremio/bin/dremio"]
-        args:
-        - "start-fg"
+        command: ["/bin/sh", "-c", 'export "DREMIO_JAVA_EXTRA_OPTS=$DREMIO_JAVA_EXTRA_OPTS -Dservices.node-tag={{.Values.reflectionExecutor.dremioEngine}}" ;/opt/dremio/bin/dremio start-fg; ']
         ports:
         - containerPort: 45678
           name: server
