--- a/charts/dremio_v2/config/dremio.conf
+++ b/charts/dremio_v2/config/dremio.conf
@@ -86,3 +86,9 @@ services.coordinator.client-endpoint.ssl.enabled: true
 services.coordinator.client-endpoint.ssl.auto-certificate.enabled: false
 services.coordinator.client-endpoint.ssl.keyStore: "/opt/dremio/tls/client.pkcs12"
 {{- end }}
+
+{{- if $.Values.coordinator.flight.tls.enabled }}
+services.flight.ssl.enabled: true
+services.flight.ssl.auto-certificate.enabled: false
+services.flight.ssl.keyStore: "/opt/dremio/tls/flight.pkcs12"
+{{- end }}
