DX-25897: Update dremio v2 helm chart to expose flight endpoint
- Updated dremio v2 helm chart to expose flight endpoint at port 32010
- Updated dremio v2 helm chart with the ability to connect to the flight endpoint via SSL.
- Fixed a typo in the Values-Reference.md documentation file

Change-Id: I155543d55e8d78c8b13f244918c5a5f8438d89fe

--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -101,6 +101,18 @@ coordinator:
       # kubectl create secret tls ${TLS_SECRET_NAME} --key ${KEY_FILE} --cert ${CERT_FILE}
       secret: dremio-tls-secret-client
 
+  # Flight Client
+  flight:
+    port: 32010
+    tls:
+      # To enable TLS for the flight endpoints, set the enabled flag to
+      # true and provide the appropriate Kubernetes TLS secret.
+      enabled: false
+
+      # To create a TLS secret, use the following command:
+      # kubectl create secret tls ${TLS_SECRET_NAME} --key ${KEY_FILE} --cert ${CERT_FILE}
+      secret: dremio-tls-secret-flight
+
 # Dremio Executor
 executor:
   # CPU & Memory
