[WIP] DX-25897: Update dremio v2 helm chart to expose flight endpoint
- Update dremio v2 helm chart to expose flight endpoint at port 32010

Change-Id: I155543d55e8d78c8b13f244918c5a5f8438d89fe

--- a/charts/dremio_v2/config/dremio.conf
+++ b/charts/dremio_v2/config/dremio.conf
@@ -86,3 +86,10 @@ services.coordinator.client-endpoint.ssl.enabled: true
 services.coordinator.client-endpoint.ssl.auto-certificate.enabled: false
 services.coordinator.client-endpoint.ssl.keyStore: "/opt/dremio/tls/client.pkcs12"
 {{- end }}
+
+{{- if $.Values.coordinator.flight.tls.enabled }}
+# Flight endpoint encryption is only supported in Dremio Enterprise Edition.
+services.coordinator.flight.ssl.enabled: true
+services.coordinator.flight.ssl.auto-certificate.enabled: false
+services.coordinator.flight.ssl.keyStore: "/opt/dremio/tls/flight.pkcs12"
+{{- end }}
