--- a/charts/dremio_v2/templates/dremio-master.yaml
+++ b/charts/dremio_v2/templates/dremio-master.yaml
@@ -124,6 +124,8 @@ spec:
         volumeMounts:
         - name: dremio-master-volume
           mountPath: /opt/dremio/data
+        - name: dremio-config
+          mountPath: /opt/dremio/conf
         command: ["/opt/dremio/bin/dremio-admin"]
         args:
         - "upgrade"
