DX-32118: Add GCS Support
Add support for GCS (Google Cloud Storage) to be used for distributed
storage.

Change-Id: I7d68ecc93d6c1ea42dab84fd9662fc9d3f76f944

--- a/charts/dremio_v2/config/dremio.conf
+++ b/charts/dremio_v2/config/dremio.conf
@@ -27,6 +27,8 @@ paths: {
   dist: "dremioAdl://{{ required "Azure Datalake store name required" $.Values.distStorage.azure.datalakeStoreName }}.azuredatalakestore.net{{ required "Azure Datalake path required" $.Values.distStorage.azure.path }}"
   {{- else if eq $.Values.distStorage.type "azureStorage" }}
   dist: "dremioAzureStorage://:///{{ required "Azure Storage filesystem required" $.Values.distStorage.azureStorage.filesystem }}{{ required "Azure Storage path required" $.Values.distStorage.azureStorage.path }}"
+  {{- else if eq $.Values.distStorage.type "gcp" }}
+  dist: "dremiogcs:///{{ required "GCS bucket name required" $.Values.distStorage.gcp.bucketName }}{{ required "GCS bucket path required" $.Values.distStorage.gcp.path }}"
   {{- else -}}
   {{ fail "Unrecognized distStorage type." }}
   {{- end }}
